--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  config:
+    import: optional:file:.env[.properties
   datasource:
     url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/db-gestao-vagas
     username: ${DB_USER:root}
@@ -10,7 +12,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-
-  jwtConfig:
-    token:
-      secret: ${SECRET_KEY}
+jwtCandidate:
+  secret: "JAVAGAS_CANDIDATE_@321#"
+jwtCompany:
+  secret: "JAVAGAS_@321#"
