--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 spring:
   datasource:
-#    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/db-gestao-vagas
-#    username: ${DB_USER:root}
-#    password: ${DB_PASSWORD:root}
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USER}
-    password: ${DATABASE_PASSWORD}
+    url: jdbc:postgres://localhost:5432/gestao-vagas
+    username: admin
+    password: admin
+#    url: ${DATABASE_URL}
+#    username: ${DATABASE_USER}
+#    password: ${DATABASE_PASSWORD}
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.PostgresSQLDialect
 
 jwtCandidate:
   secret: "JAVAGAS_CANDIDATE_@321#"
