--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.hocinesehanine</groupId>
     <artifactId>gestao_vagas</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>Gestao vagas</name>
     <description>Job management</description>
     <properties>
