--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -15,3 +15,11 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+      - name: Build project
+        run: mv clean install
+      - name: Login docker
+        run: docker log -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+      - name: Build docker image
+        run: docker build -t hocinesehanine/gestao_vagas .
+      - name: Publish image
+        run: docker run push hocinesehanine/gestao_vagas
