--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,7 +16,7 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
       - name: Build project
-        run: mv clean install
+        run: mvn clean install
       - name: Login docker
         run: docker log -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Build docker image
