--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Build docker image
         run: docker build -t hocinesehanine/gestao_vagas .
       - name: Publish image
-        run: docker run push hocinesehanine/gestao_vagas
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}} && docker run push hocinesehanine/gestao_vagas
