--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -21,5 +21,7 @@ jobs:
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Build docker image
         run: docker build -t hocinesehanine/gestao_vagas .
+      - name: Login docker
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Publish image
         run: docker run push hocinesehanine/gestao_vagas
