--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/db-gestao-vagas
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/db_gestao_vagas
     username: ${DB_USER:root}
     password: ${DB_PASSWORD:root}
-
-#    url: ${DATABASE_URL}
-#    username: ${DATABASE_USER}
-#    password: ${DATABASE_PASSWORD}
+#    url: jdbc:mysql://localhost:3306/db-gestao-vagas
+#    username: admin
+#    password: admin
   jpa:
     show-sql: true
     hibernate:
